<b>Version 2.2.1:</b><br/><br/>
    &#8226; Better notification when replying to tweet<br/>
    &#8226; Bug fixes<br/>
    &#8226; Crash fixes<br/>
    &#8226; Translation updates<br/>
</br><br/>

<b>Version 2.2.0:</b><br/><br/>
    &#8226; [New] Full screen layout option<br/>
    &#8226; [New] Pre-cache images option<br/>
    &#8226; [New] Draft system for multiple drafts<br/>
    &#8226; [New] Plain text browser option<br/>
    &#8226; [New] Tweet multiple images<br/>
    &#8226; [New] Pictures in DM's with TwitPic<br/>
    &#8226; [New] Live streaming mentions<br/>
    &#8226; [New] Force overflow in some places<br/><br/>
    &#8226; [Improved] Notification while tweeting<br/>
    &#8226; [Improved] Options for in app browser<br/>
    &#8226; [Improved] Refresh tweets count on timeline<br/>
    &#8226; [Improved] Cache and image loading<br/>
    &#8226; [Improved] Style changes for UI<br/>
    &#8226; [Improved] Updated Twitter4j<br/><br/>
    &#8226; [Fix] Some problems with uploading photos<br/>
    &#8226; [Fix] Toast bar sticking<br/>
    &#8226; [Fix] Max tweets to download<br/>
</br><br/>

<b>Version 2.1.6:</b><br/><br/>
    &#8226; More duplication fixes<br/>
    &#8226; Crash fixes<br/>
    &#8226; Translation updates<br/>
</br><br/>

<b>Version 2.1.5:</b><br/><br/>
    &#8226; Fixed black loading screen and duplicates occurring from it<br/>
    &#8226; Toast bar shouldn't get stuck anymore<br/>
    &#8226; Internal browser updates<br/>
    &#8226; Removed echo sound when clicking a tweet from the timeline<br/>
    &#8226; Reply to all screennames from a mention notification<br/>
    &#8226; Fixed adding users to lists<br/>
    &#8226; Some crash fixes<br/>
    &#8226; Translation updates<br/>
</br><br/>

<b>Version 2.1.3:</b><br/><br/>
    &#8226; Bug fixes for the clickable links<br/>
    &#8226; Change the background of the internal browser to match the theme<br/>
    &#8226; In-line previews for any direct image links<br/>